--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,13 +14,20 @@ source:
     - https://cran.r-project.org/src/contrib/Archive/functional/functional_{{ version }}.tar.gz
   sha256: 19b78e27c27b1081245222c42da4dd1cb65c5643e6da9d6c1a6e997755c21888
 
-build:
-  number: 0
-  skip: true  # [win32]
 
+  # patches:
+   # List any patch files here
+   # - fix.patch
+
+build:
+  # If this is a new build for the same version, increment the build number.
+  number: 0
+
+  # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
+
 
 requirements:
   build:
@@ -31,8 +38,15 @@ requirements:
 
 test:
   commands:
-    - $R -e "library('functional')"  # [not win]
+    # You can put additional test commands to be run here.
+    - $R -e "library('functional')"           # [not win]
     - "\"%R%\" -e \"library('functional')\""  # [win]
+
+  # You can also put a file called run_test.py, run_test.sh, or run_test.bat
+  # in the recipe that will be run at test time.
+
+  # requires:
+    # Put any additional test requirements here.
 
 about:
   home: https://CRAN.R-project.org/package=functional
@@ -44,3 +58,25 @@ extra:
   recipe-maintainers:
     - johanneskoester
     - bgruening
+    - mingwandroid
+
+# The original CRAN metadata for this package was:
+
+# Package: functional
+# Type: Package
+# Title: Curry, Compose, and other higher-order functions
+# Version: 0.6
+# Date: 2014-07-15
+# Author: Peter Danenberg <pcd@roxygen.org>
+# Maintainer: Peter Danenberg <pcd@roxygen.org>
+# Description: Curry, Compose, and other higher-order functions
+# License: GPL (>= 2)
+# LazyLoad: yes
+# Packaged: 2014-07-15 23:41:35 UTC; danenberg
+# NeedsCompilation: no
+# Repository: CRAN
+# Date/Publication: 2014-07-16 07:38:04
+
+# See
+# http://docs.continuum.io/conda/build.html for
+# more information about meta.yaml
