--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,6 +17,7 @@ build:
   merge_build_host: True  # [win]
   # If this is a new build for the same version, increment the build number.
   number: 4
+  noarch: generic
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -50,6 +51,7 @@ about:
   license: GPL (>= 2)
   summary: Curry, Compose, and other higher-order functions
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
 extra:
   recipe-maintainers:
